--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,44 @@ services:
   postgres:
     image: postgres:18
     environment:
-      POSTGRES_USER: app
-      POSTGRES_PASSWORD: app
-      POSTGRES_DB: files
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     ports:
-      - "5432:5432"
+      - "${DB_PORT}:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
+      interval: 1m30s
+      timeout: 30s
+      retries: 5
+      start_period: 30s
 
   redis:
     image: redis:7
     ports:
-      - "6379:6379"
+      - "${REDIS_PORT}:6379"
 
+  metadata:
+    build:
+      context: .
+      dockerfile: cmd/metadata/Dockerfile
+    environment:
+      - DATABASE_URL=postgres://${DB_USER}:${DB_PASSWORD}@postgres:5432/${DB_NAME}?sslmode=disable
+    depends_on:
+      postgres:
+        condition: service_healthy
   upload:
     build:
       context: .
       dockerfile: cmd/upload/Dockerfile
+    ports:
+      - "50052:50052"
+    environment:
+      - METADATA_SERVICE_ADDR=metadata:50051
+      - REDIS_ADDR=redis:6379
+    volumes:
+      - ./data/uploads:/app/uploads
     depends_on:
       - postgres
       - redis
+      - metadata
