--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,10 @@ services:
       - "${DB_PORT}:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
-      interval: 1m30s
-      timeout: 30s
+      interval: 5s
+      timeout: 5s
       retries: 5
-      start_period: 30s
+      start_period: 5s
 
   redis:
     image: redis:7
@@ -24,6 +24,7 @@ services:
       context: .
       dockerfile: cmd/metadata/Dockerfile
     environment:
+      - GRPC_PORT=50051
       - DATABASE_URL=postgres://${DB_USER}:${DB_PASSWORD}@postgres:5432/${DB_NAME}?sslmode=disable
     depends_on:
       postgres:
@@ -35,11 +36,25 @@ services:
     ports:
       - "50052:50052"
     environment:
+      - GRPC_PORT=50052
+      - METADATA_SERVICE_ADDR=metadata:50051
+      - REDIS_ADDR=redis:6379
+      - UPLOAD_DIR=/app/uploads
+    volumes:
+      - ./data/uploads:/app/uploads
+    depends_on:
+      - postgres
+      - redis
+      - metadata
+  worker:
+    build:
+      context: .
+      dockerfile: cmd/worker/Dockerfile
+    environment:
       - METADATA_SERVICE_ADDR=metadata:50051
       - REDIS_ADDR=redis:6379
     volumes:
       - ./data/uploads:/app/uploads
     depends_on:
-      - postgres
       - redis
       - metadata
